# verifiaml

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
common/: Cargo.toml
common/examples/common/: lib.rs
common/examples/simple_perceptron_mnist/: main.rs
common/examples/simple_perceptron_mnist/data/: 10_test_inputs.json  10_test_outputs.json  output_test_150.json
common/examples/two_layer_perceptron_mnist/: main.rs
common/examples/two_layer_perceptron_mnist/data/: 10_test_outputs.json
common/src/: cp_snark.rs  lib.rs  quantization.rs
common/src/compatibility/: mod.rs
common/src/compatibility/example_models/: mod.rs
common/src/compatibility/example_models/fully_connected_layer/: mod.rs
common/src/compatibility/example_models/fully_connected_layer/parameters/: bias.json  weights.json
common/src/compatibility/example_models/simple_perceptron_mnist/: mod.rs
common/src/compatibility/example_models/simple_perceptron_mnist/parameters/: mod.rs
common/src/compatibility/example_models/two_layer_perceptron_mnist/: mod.rs
common/src/compatibility/example_models/two_layer_perceptron_mnist/parameters/: bias_2.json  mod.rs
common/src/compatibility/python/: mod.rs  tests.rs
common/src/example_models/simple_perceptron_mnist/: mod.rs
common/src/example_models/simple_perceptron_mnist/parameters/: bias.json
common/src/example_models/two_layer_perceptron_mnist/: mod.rs
common/src/model/: isolated_verification.rs  mod.rs  parser.rs
common/src/model/nodes/: bmm.rs  mod.rs  relu.rs  requantise_bmm.rs  requantise_bmm_float.rs  requantise_bmm_ref.rs  requantise_bmm_simplified.rs  requantize_bmm_float.rs  requantize_bmm_ref.rs  requantize_bmm_simplified.rs  requantize_bmm_single.rs  reshape.rs
common/src/model/qarray/: mod.rs
common/src/model/tensor/: mod.rs  tests.rs
common/src/quantization/: mod.rs  tests.rs
common/src/utils/: mod.rs  pcs_types.rs  test_sponge.rs
exploring_tf_lite/: env.yml  exploring.ipynb  parser.py  q_model_runner.py  serialising_mnist_data.ipynb  simple_perceptron_nne.ipynb  training_simple_model.ipynb  training_two_layer_perceptron.ipynb  two_layer_perceptron.ipynb
exploring_tf_lite/example_models/: q_fully_connected_layer.py  q_model_wrapper.py  q_simple_perceptron.py  q_two_layer_perceptron.py  two_layer_perceptron.py
exploring_tf_lite/models/: mnist_model_quant.tflite  signed_model_quant.tflite  simple_model_quant.tflite  two_layer_perceptron.tflite
prover/: Cargo.toml
prover/benches/: bmm.rs
prover/benches/data/: input_test_150.json
prover/examples/common/: lib.rs  utils.rs
prover/examples/simple_perceptron_mnist/: input.rs  main.rs  parameters.rs
prover/examples/simple_perceptron_mnist/data/: input_test_150.json
prover/examples/simple_perceptron_mnist/parameters/: mod.rs  weights.json
prover/examples/two_layer_perceptron_mnist/: main.rs  parameters.rs
prover/examples/two_layer_perceptron_mnist/data/: output_test_150.json
prover/examples/two_layer_perceptron_mnist/parameters/: bias_1.json  mod.rs  weights_1.json  weights_2.json
prover/src/: lib.rs  model.rs  util.rs  utils.rs
prover/src/compatibility/: mod.rs
prover/src/nodes/: bmm.rs  downcast.rs  mod.rs  relu.rs  requantise_bmm.rs  requantize_bmm_float.rs  reshape.rs
src/: error.rs  lib.rs  pcs_types.rs  quantization.rs  utils.rs
src/hidden_model/: mod.rs
src/hidden_model/hidden_nodes/: hidden_fc.rs  hidden_loose_fc.rs  hidden_relu.rs  hidden_reshape.rs  mod.rs
src/model/: isolated_verification.rs  mod.rs  qarray.rs  reshape.rs  reshaping.rs
src/model/examples/: mod.rs
src/model/examples/simple_perceptron_mnist/: mod.rs  parameters.rs
src/model/examples/two_layer_perceptron_mnist/: input.rs  mod.rs  parameters.rs
src/model/layers/: matmul.rs  mod.rs  relu.rs
src/model/nodes/: bmm.rs  fc.rs  loose_fc.rs  mod.rs  relu.rs  requantise_bmm.rs  reshape.rs
src/model/qarray/: mod.rs  tests.rs
src/proofs/: mod.rs
src/utils/: mod.rs  pcs_types.rs  test_sponge.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  model.rs
verifier/src/nodes/: bmm.rs  relu.rs  requantise_bmm.rs  requantize_bmm_float.rs  reshape.rs
