[workspace]
members = [
    "common", 
    "prover", 
    "verifier"
]
resolver = "2"

[workspace.dependencies]
ark-std = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-poly = {version = "^0.4.0", default-features = false }
ark-poly-commit = {version = "^0.4.0", default-features = false }
ark-crypto-primitives = {version = "^0.4.0", default-features = false }
ark-sumcheck = { git = "ssh://git@github.com/HungryCatsStudio/sumcheck-private.git", default-features = false }
rayon = { version = "1.5", default-features = false }
ark-bn254 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
blake2 = { version = "0.10", default-features = false }
serde_json = "1.0.108"
ark-pcs-bench-templates = { git = "https://github.com/HungryCatsStudio/poly-commit", branch = "ligero-uni-and-ml-absorb", default-features = false }
more-asserts = { version = "0.3.1", default-features = false }
pyo3 = { version = "0.21.1", features = ["auto-initialize"] }
criterion = { version = "^0.5.1" }

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly-commit = { git = "https://github.com/HungryCatsStudio/poly-commit", branch = "ligero-uni-and-ml-absorb" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra/" }
