[workspace]
members = [
    "common", 
    "prover", 
    "verifier"
]
resolver = "2"

[workspace.dependencies]
ark-std = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-poly = {version = "^0.4.0", default-features = false }
ark-poly-commit = {version = "^0.4.0", default-features = false }
ark-crypto-primitives = {version = "^0.4.0", default-features = false }
ark-sumcheck = { git = "ssh://git@github.com/HungryCatsStudio/sumcheck-private.git", default-features = false }
rayon = { version = "1.5", default-features = false }
ark-bn254 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
blake2 = { version = "0.10", default-features = false }
serde_json = "1.0.108"
ark-pcs-bench-templates = { git = "https://github.com/HungryCatsStudio/poly-commit", rev = "dfdd8e8" }
more-asserts = { version = "0.3.1", default-features = false }
pyo3 = { version = "0.21.1", features = ["auto-initialize"] }

[patch.crates-io]
ark-ff = { git = "https://github.com/HungryCatsStudio/algebra", rev = "97c7a4f" }
ark-ec = { git = "https://github.com/HungryCatsStudio/algebra", rev = "97c7a4f" }
ark-serialize = { git = "https://github.com/HungryCatsStudio/algebra", rev = "97c7a4f" }
ark-poly = { git = "https://github.com/HungryCatsStudio/algebra", rev = "97c7a4f" }
ark-poly-commit = { git = "https://github.com/HungryCatsStudio/poly-commit", rev = "e637709" }
ark-crypto-primitives = { git = "https://github.com/HungryCatsStudio/crypto-primitives", rev = "9ef1753" }
ark-bn254 = { git = "https://github.com/HungryCatsStudio/algebra", rev = "97c7a4f" }
