[package]
name = "hcs-common"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true, features = [ "derive" ] }
ark-poly = { workspace = true }
ark-poly-commit = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-sumcheck = { workspace = true }
rayon = { workspace = true, optional = true }
ark-pcs-bench-templates = { workspace = true, optional = true}
blake2 = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true, features = [ "curve" ] }

[features]
default = [ "std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std", "ark-crypto-primitives/std", "ark-poly-commit/std", "ark-sumcheck/std" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-poly-commit/parallel", "ark-sumcheck/parallel", "rayon" ]
test-types = [ "ark-pcs-bench-templates", "blake2" ]