[package]
name = "hcs-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true, features = [ "derive" ] }
ark-poly = { workspace = true }
ark-poly-commit = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-sumcheck = { workspace = true }
rayon = { workspace = true, optional = true }
hcs-common = { path = "../common" }
hcs-verifier = { path = "../verifier", optional = true }
criterion = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true, features = [ "curve" ] }
pyo3 = { workspace = true }
more-asserts = { workspace = true }

[[example]]
path = "examples/simple_perceptron_mnist/main.rs"
name = "simple_perceptron_mnist_proof"
required-features = [ "test-types" ]

[[example]]
path = "examples/two_layer_perceptron_mnist/main.rs"
name = "two_layer_perceptron_mnist_proof"
required-features = [ "test-types" ]

[[bench]]
name = "bmm"
harness = false

[features]
default = [ "std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std", "ark-crypto-primitives/std", "ark-poly-commit/std", "ark-sumcheck/std" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-poly-commit/parallel", "ark-sumcheck/parallel", "rayon" ]
test-types = [ "hcs-common/test-types", "hcs-verifier" ]
python = [ "hcs-common/python" , "hcs-verifier" ]